# movie-poster-ha

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: release.yml  validate.yml
custom_components/movie_poster/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  issues.py  manifest.json  models.py  normalizer.py  plex_auth.py  plex_client.py  profiles.py  repairs.py  resolver.py  rotation.py  sensor.py  services.yaml  state_machine.py
custom_components/movie_poster/frontend/: movie-poster-panel.js
custom_components/movie_poster/translations/: en.json
docs/: ARCHITECTURE.md  BETA_TESTING.md  ROADMAP.md
docs/adr/: 0001-native-ha-integration.md  0002-declarative-presentation.md
scripts/: render_brand.swift
tests/: __init__.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_normalizer.py  test_plex_auth.py  test_plex_client.py  test_profiles.py  test_resolver.py  test_rotation.py  test_state_machine.py
tests/frontend/: harness.html  layout.spec.js
