[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-poster-ha"
version = "0.1.0.dev1"
description = "Plex-powered movie poster display for Home Assistant"
requires-python = ">=3.14.2,<3.15"
license = "MIT"
authors = [{ name = "MrJester" }]
dependencies = ["PlexAPI==4.18.1"]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "SLF001"]
